fix content z-index from card

--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -24,6 +24,7 @@
         position: absolute
         right: 0
         top: 0
+        z-index: 1
     .media
         --bs-aspect-ratio: 150%
         background-color: transparent
